--- a/index.html
+++ b/index.html
@@ -4,45 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Epia Sign-up Form</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section>
+    <section id="logoImageContainer">
         <!-- <img src="studio.jpg"> -->
-        <div><img src="logo-black.png"></div>
-        <div> Photo by <a href="https://unsplash.com/@caught_in_joy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Caught In Joy</a> on <a href="https://unsplash.com/photos/ptVBlniJi50?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
+        <div id="logo"><img src="logoNaranja.png"></div>
+        <div id="credit"> Photo by <a href="https://unsplash.com/@caught_in_joy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Caught In Joy</a> on <a href="https://unsplash.com/photos/ptVBlniJi50?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
     </section>
-    <main>
-        <article>
-            <p>This is not a real service! This is the sign-up form for The Odin Project, and also a preview for the upcoming website for <strong>Epia Estudios</strong></p>
+    <main id="content">
+        <article id="content1">
+            <p>This is not a real service! This is the sign-up form for The Odin Project, and also a preview for the upcoming website for <strong>Epia Estudios.</strong></p>
+            <br>
             <p>Available <em>very soon</em>.</p>
         </article>
-        <article>
+        <article id="content2">
             <h2>Let's do this!</h2>
-            <form action="" method="post">
-                <label for="">First Name</label>
-                <input type="text" id="" name="">
-
-                <label for="">Last Name</label>
-                <input type="text" id="" name="">
-
-                <label for="">Email</label>
-                <input type="text" id="" name="">
-
-                <label for="">Phone Number</label>
-                <input type="text" id="" name="">
-
-                <label for="">Password</label>
-                <input type="text" id="" name="">
-
-                <label for="">Confirm Password</label>
-                <input type="text" id="" name="">
+            
+            <form action="" method="post" id="form">
+                <div class="formInput">
+                    <label for="firstName">FIRST NAME</label>
+                    <br>
+                    <input type="text" id="firstName" name="firstName">
+                </div>
+                <div class="formInput">
+                    <label for="lastName">LAST NAME</label>
+                    <br>
+                    <input type="text" id="lastName" name="lastName">
+                </div>
+                <div class="formInput">
+                    <label for="email">EMAIL</label>
+                    <br>
+                    <input type="email" id="email" name="email">
+                </div>
+                <div class="formInput">
+                    <label for="phoneNumber">PHONE NUMBER</label>
+                    <br>
+                    <input type="number" id="phoneNumber" name="phoneNumber">
+                </div>
+                <div class="formInput">
+                    <label for="password">PASSWORD</label>
+                    <br>
+                    <input type="password" id="password" name="password">
+                </div>
+                <div class="formInput">
+                    <label for="confirmPassword">CONFIRM PASSWORD</label>
+                    <br>
+                    <input type="password" id="confirmPassword" name="confirmPassword">
+                </div>
             </form>
         </article>
-        <article>
-            <div><button>Create Account</button></div>
+        <article id="content3">
+            <div><button type="submit">Create Account</button></div>
             <span>Already have an account?</span>
-            <span><a href="">Log in</a></span>
+            <span><a id="login" href="">Log in</a></span>
         </article>
     </main>
 </html>
