--- a/index.html
+++ b/index.html
@@ -28,32 +28,32 @@
                 <div class="formInput">
                     <label for="firstName">FIRST NAME</label>
                     <br>
-                    <input type="text" id="firstName" name="firstName">
+                    <input type="text" id="firstName" name="firstName" required>
                 </div>
                 <div class="formInput">
                     <label for="lastName">LAST NAME</label>
                     <br>
-                    <input type="text" id="lastName" name="lastName">
+                    <input type="text" id="lastName" name="lastName" required>
                 </div>
                 <div class="formInput">
                     <label for="email">EMAIL</label>
                     <br>
-                    <input type="email" id="email" name="email">
+                    <input type="email" id="email" name="email" required>
                 </div>
                 <div class="formInput">
                     <label for="phoneNumber">PHONE NUMBER</label>
                     <br>
-                    <input type="number" id="phoneNumber" name="phoneNumber">
+                    <input type="number" id="phoneNumber" name="phoneNumber" required>
                 </div>
                 <div class="formInput">
                     <label for="password">PASSWORD</label>
                     <br>
-                    <input type="password" id="password" name="password">
+                    <input type="password" id="password" name="password" required>
                 </div>
                 <div class="formInput">
                     <label for="confirmPassword">CONFIRM PASSWORD</label>
                     <br>
-                    <input type="password" id="confirmPassword" name="confirmPassword">
+                    <input type="password" id="confirmPassword" name="confirmPassword" required>
                 </div>
             </form>
         </article>
